--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "cucumber": "3.2.1",
+    "cucumber": "^4.0.0",
     "mocha": "^5.0.4",
     "nodemon": "^1.17.2",
     "nyc": "^11.6.0"
