--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arcms",
-  "version": "1.0.18",
+  "version": "1.0.2",
   "description": "A Microservice Framework",
   "main": "index.js",
   "scripts": {
@@ -24,20 +24,12 @@
   },
   "homepage": "https://github.com/altereagle/arc#readme",
   "dependencies": {
-    "body-parser": "^1.18.2",
     "colors": "^1.2.1",
     "dotenv": "^5.0.1",
-    "express": "^4.16.3",
-    "express-query-boolean": "^2.0.0",
-    "express-query-date": "^1.1.0",
-    "express-query-int": "^3.0.0",
     "generic-pool": "^3.4.2",
-    "morgan": "^1.9.0",
-    "mustache": "^2.3.0",
     "paperboy-communicator": "^1.0.2",
     "slug": "^0.9.1",
-    "tdigest": "^0.1.1",
-    "user-agent-parser": "^0.6.0"
+    "tdigest": "^0.1.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
