--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "dotenv": "^5.0.1",
     "generic-pool": "^3.4.2",
     "paperboy-communicator": "^1.1.0",
-    "slug": "^0.9.1",
+    "slugify": "^1.3.0",
     "tdigest": "^0.1.1"
   },
   "devDependencies": {
